# robotics_remote_teleoperation

./: .gitignore  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml
bridge_server/: Dockerfile  README.md  bridge.py  rosbridge_test.html
bridge_server/config/: env.yaml
bridge_server/tests/: smoke_test_bridge.py
docs/: PLAN.md
robot_core/: Dockerfile  README.md  entrypoint.sh
robot_core/src/robot_launch/: CMakeLists.txt  package.xml
robot_core/src/robot_launch/launch/: teleop.launch.py  teleop_launch.py  test_teleop.launch.py
robot_core/src/robot_launch/msg/: Status.msg
robot_core/src/robot_launch/robot_launch/: camera_publisher.py  cmd_vel_subscriber.py  diag_aggregator_node.py  fake_cmd_vel_publisher.py  fake_emergency_stop_publisher.py  fake_odom_node.py  fake_status_node.py  monitor_node.py  status_node.py  status_publisher.py  watchdog.py
robot_core/src/robot_launch_BACKUP/: package.xml
robot_core/src/robot_launch_BACKUP/launch/: teleop.launch.py
robot_core/src/robot_launch_BACKUP/robot_launch/: cmd_vel_subscriber.py  fake_camera_publisher.py  watchdog.py
signaling_server/: Dockerfile  README.md  app.py  auth.py  requirements.txt
signaling_server/tests/: smoke_test_ws.py  ws_manual.html
web_dashboard/: Dockerfile  README.md  index.html  package-lock.json  package.json
web_dashboard/src/: App.jsx  App_backup.jsx
